# Active_Terminal_Assistant

./: .gitignore  AGENTS.md  Makefile  README.md  agent.toml  human_reference_benchmark.py  human_reference_cases.json  main.ipynb  ollama_wait_cli.py  pyproject.toml  requirements.txt  run_all.bat  run_training.py  smoke_test_ollama_wait_cli.py  ubuntu_irc_behavior_benchmark.py  wait_model.py
app/: __init__.py
app/adapters/: __init__.py  decision.py  dialogue.py  ollama.py
app/cli/: __init__.py  commands.py  input.py  main.py  rendering.py
app/config/: __init__.py  settings.py
app/gui/: __init__.py  main.py  viewmodel.py
app/prompts/: __init__.py  context_summary.txt  loader.py  main_assistant.txt  proactive_decision.txt  proactive_generation.txt
app/services/: __init__.py  context.py  proactive.py  rules.py
app/state/: __init__.py  models.py  session.py
app/utils/: __init__.py  logging.py  text.py
app/workflow/: __init__.py  orchestrator.py
artifacts/: benchmark_report.md  context_showcase.md  human_reference_benchmark.json  human_reference_benchmark.md  metrics.json  prediction_preview.json  ubuntu_irc_behavior_benchmark.json  ubuntu_irc_behavior_benchmark.md  wait_policy_bundle.pt  wait_policy_state.pt
docs/: PROJECT_REFERENCE.md  TEST_PLAN.md
scripts/: check_ollama.py  prepare_runtime.py  run_cli.py  run_gui.py
tests/e2e/: test_scripted_session.py
tests/integration/: test_workflow_runtime.py
tests/unit/: test_commands.py  test_decision_parser.py  test_gui_viewmodel.py  test_rules.py
